2014-10-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check_PROGRAMS): Add aggregate_size.c.
	(TESTS): Add run-aggregate-size.sh.
	(EXTRA_DIST): Add run-aggregate-size.sh, testfile-sizes1.o.bz2
	and testfile-sizes2.o.bz2.
	(aggregate_size_LDADD): New variable.
	* aggregate_size.c: New file.
	* run-aggregate-size.sh: New test.
	* testfile-sizes1.o.bz2: New test file.
	* testfile-sizes2.o.bz2: Likewise.

2014-09-26  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Support NT_FILE for locating files.
	* Makefile.am (TESTS): Add run-linkmap-cut.sh.
	(EXTRA_DIST): Add run-linkmap-cut.sh, linkmap-cut-lib.so.bz2,
	linkmap-cut.bz2 and linkmap-cut.core.bz2 .
	* linkmap-cut-lib.so.bz2: New file.
	* linkmap-cut.bz2: New file.
	* linkmap-cut.core.bz2: New file.
	* run-linkmap-cut.sh: New file.
	* run-unstrip-n.sh: Update its expected output.

2014-08-28  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (check_PROGRAMS): Add deleted and deleted-lib.so.
	(TESTS, EXTRA_DIST): Add run-deleted.sh.
	(deleted_LDADD, deleted_lib_so_LDFLAGS, deleted_lib_so_CFLAGS): New.
	* deleted-lib.c: New file.
	* deleted.c: New file.
	* run-deleted.sh: New file.

2014-06-15  Mark Wielaard  <mjw@redhat.com>

	* backtrace.c (frame_callback): Error on seeing more than 16 frames.

2014-06-13  Mark Wielaard  <mjw@redhat.com>

	* backtrace.c (callback_verify): Accept "__libc_do_syscall" as first
	frame symname.

2014-06-13  Mark Wielaard  <mjw@redhat.com>

	* backtrace-subr.sh (check_native_unsupported): New function.
	(check_native): Call it.
	(check_native_core): Likewise.
	* run-backtrace-dwarf.sh: Likewise.

2014-06-11  Mark Wielaard  <mjw@redhat.com>

	* backtrace.c (main): Check that Dwfl was attached by calling
	dwfl_pid and printing the error when it is not.

2014-05-18  Mark Wielaard  <mjw@redhat.com>

	* testfile-backtrace-demangle.cc (cxxfunc): Make non-static.
	(f): Likewise.
	* testfile-backtrace-demangle.bz2: Regenerate.
	* testfile-backtrace-demangle.core.bz2: Likewise.
